# IB_Simple

./: .gitignore  .pre-commit-config.yaml  README.md  math-logic.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
config/: portfolios.csv  settings.ini
config/data/: portfolios_DU111111.csv
data/: portfolios.csv  portfolios_DU111111.csv
dev-plan/: 101.md  101_addon.md  checklist.md  checklist_addod.md  checklist_addon.md  followups.md  plan.md  plan_addon.md  srs.md  srs_addon.md  workflow.md  workflow_addon.md
examples/: preview_demo.py
src/: __init__.py  rebalance.py  snapshot.py
src/broker/: errors.py  execution.py  ibkr_client.py  utils.py
src/core/: __init__.py  confirmation.py  drift.py  errors.py  planner.py  preview.py  pricing.py  sizing.py  targets.py
src/io/: __init__.py  config_loader.py  portfolio_csv.py  reporting.py  validate_config.py  validate_portfolios.py
tests/: conftest.py
tests/examples/: test_preview_demo.py
tests/integration/: test_confirm_global_parallel.py  test_execution_paper.py  test_ibkr_snapshot.py  test_integration_placeholder.py  test_parallel_accounts.py  test_parallel_pacing.py  test_rebalance_confirmation.py  test_rebalance_dry_run.py  test_run_summary.py
tests/unit/: test_account_overrides.py  test_config_loader.py  test_confirm_per_account.py  test_confirmation_failure_summary.py  test_confirmation_independent.py  test_confirmation_modes.py  test_confirmation_summary_counts.py  test_drift.py  test_execution.py  test_sizing.py  (+22 more)
