[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-simple"
version = "0.1.0"
dependencies = [
    "pandas",
    "ib_async",
    "typing-extensions",
    "pydantic>=2",
    "rich",
    "click",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
explicit_package_bases = true
